--- a/FitNesseRoot/TrafficLights/Traffic_light_states/CarTrafficStates.wiki
+++ b/FitNesseRoot/TrafficLights/Traffic_light_states/CarTrafficStates.wiki
@@ -1,15 +1,19 @@
 ---
 Test
 ---
-!|Traffic Lights		|
-|previous state	|next state?|
+!|import							|
+|org.trafficlights.test.acceptance	|
+
+
+!|Traffic Lights				|
+|previous state	|next state?	|
 |red			|red, yellow	|
-|red, yellow	|green		|
-|green			|yellow		|
-|yellow			|red		|
-|invalid state	|yellow blink|
+|red, yellow	|green			|
+|green			|yellow			|
+|yellow			|red			|
+|invalid state	|yellow blink	|
 
 
 
 !define TEST_SYSTEM {slim}
-!path target/classes
+!path target/test-classes
