Refactoring the project
Adding support for running acceptance tests in FitNesse with LightStateEditor and respective Unit tests

--- a/FitNesseRoot/TrafficLights/Traffic_light_states/CarTrafficStates.wiki
+++ b/FitNesseRoot/TrafficLights/Traffic_light_states/CarTrafficStates.wiki
@@ -7,8 +7,8 @@ Test
 
 !|Traffic Lights				|
 |previous state	|next state?	|
-|red			|red, yellow	|
-|red, yellow	|green			|
+|red			|red_yellow	|
+|red_yellow		|green			|
 |green			|yellow			|
 |yellow			|red			|
 |invalid state	|yellow blink	|
@@ -16,4 +16,5 @@ Test
 
 
 !define TEST_SYSTEM {slim}
+!path target/classes
 !path target/test-classes
