Passing the acceptance tests

--- a/FitNesseRoot/TrafficLights/Traffic_light_states/CrossingControl/TwoCarCrossings.wiki
+++ b/FitNesseRoot/TrafficLights/Traffic_light_states/CrossingControl/TwoCarCrossings.wiki
@@ -1,10 +1,13 @@
 ---
 Test
 ---
-
 !| FirstLightSwitchingCrossingController            |
 |first light|second light|first light?|second light?|
 |green      |red         |yellow      |red          |
+|yellow     |red         |red         |red          |
+|red_yellow |red         |green       |red          |
+|red        |red         |red_yellow  |red          |
+
 
 
 !define TEST_SYSTEM {slim}
