Refactor the code - extracting methods

--- a/FitNesseRoot/TrafficLights/Traffic_light_states/CarTrafficStates.wiki
+++ b/FitNesseRoot/TrafficLights/Traffic_light_states/CarTrafficStates.wiki
@@ -1,11 +1,10 @@
 ---
 Test
 ---
-
 !|Traffic Lights            |
 |previous state|next state? |
-|red           |red_yellow  |
-|red_yellow    |green       |
+|red           |red, yellow |
+|red, yellow   |green       |
 |green         |yellow      |
 |yellow        |red         |
 |invalid state |yellow blink|
