--- a/FitNesseRoot/RecentChanges.wiki
+++ b/FitNesseRoot/RecentChanges.wiki
@@ -1,5 +1,5 @@
-|TrafficLights.Traffic_light_states.CrossingControl.TwoCarCrossings||16:50:02 quarta, fev 15, 2023|
-|TrafficLights.Traffic_light_states.CarTrafficStates||16:35:19 quarta, fev 15, 2023|
+|TrafficLights.Traffic_light_states.CrossingControl.TwoCarCrossings||10:38:16 Thu, Feb 16, 2023|
+|TrafficLights.Traffic_light_states.CarTrafficStates||10:37:50 Thu, Feb 16, 2023|
 |TrafficLights.SetUp||16:34:50 quarta, fev 15, 2023|
 |TrafficLights.Traffic_light_states.SetUP||16:33:51 quarta, fev 15, 2023|
 |TrafficLights.Traffic_light_states.CrossingControl||16:11:24 quarta, fev 15, 2023|
